react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f recipeUI.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f recipeUI.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/openshift-test-default: "true"
        io.kompose.service: react
    spec:
      containers:
        - image: react
          name: react
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
