deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: recipe-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-web
  template:
    metadata:
      labels:
        app: recipe-web
    spec:
      containers:
        - name: recipe-ui
          image: ui-docker-image
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
kind: Service
apiVersion: v1
metadata:
  app: recipe-ui
spec:
ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
selector:
  app: recipe-web

---
apiVersion: route.openshift.io/v1
kind: Route
spec:
  subdomain: recipe-view
  port:
    targetPort: 8080
  to:
    kind: Service
    name: recipe-web
